# ChangeLog for x11-base/xorg-server
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.526 2010/08/11 22:01:38 maekke Exp $

  11 Aug 2010; Markus Meier <maekke@gentoo.org> xorg-server-1.7.7-r1.ebuild:
  arm stable, bug #330593

  06 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  xorg-server-1.7.7-r1.ebuild:
  Stable on amd64 wrt bug #330593

  06 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  xorg-server-1.7.7-r1.ebuild:
  stable x86, bug 330593

  02 Aug 2010; Raúl Porcel <armin76@gentoo.org> xorg-server-1.7.6.ebuild:
  alpha/ia64/sh/sparc stable wrt #308521

  31 Jul 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xorg-server-1.7.7-r1.ebuild:
  Add patch to prefer nouveau over nv to 1.7.7 too

*xorg-server-1.7.7-r1 (31 Jul 2010)

  31 Jul 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xorg-server-1.7.7.ebuild, +xorg-server-1.7.7-r1.ebuild:
  Add patches from nominations branch. So we can open stablerequest for
  1.7.7-r1.

  22 Jul 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xorg-server-1.8.0.ebuild, -xorg-server-1.8.1.901.ebuild,
  -xorg-server-1.8.1.902.ebuild:
  Drop older 1.8 series ebuilds.

*xorg-server-1.8.2 (21 Jul 2010)

  21 Jul 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-server-1.8.2.ebuild, +files/xorg-server-1.8-nouveau-default.patch:
  Modify autoconfiguration to prefer nouveau over nv.

*xorg-server-1.8.1.902 (26 Jun 2010)

  26 Jun 2010; Rémi Cardona <remi@gentoo.org>
  +xorg-server-1.8.1.902.ebuild:
  bump to 1.8.1.902

  18 Jun 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  xorg-server-1.8.1.901.ebuild:
  No need to block dtrace anymore. Does not fail if it is around today.

  10 Jun 2010; Rémi Cardona <remi@gentoo.org> xorg-server-1.8.1.901.ebuild:
  add missing eselect-opengl call, fixes bug #321443

*xorg-server-1.8.1.901 (09 Jun 2010)

  09 Jun 2010; Tomáš Chvátal <scarabeus@gentoo.org>