@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/Attic/xorg-server-1.7.7-r1.ebuild,v 1.5 2010/08/11 22:01:38 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/Attic/xorg-server-1.7.7-r1.ebuild,v 1.6 2010/09/05 11:59:11 remi Exp $
 
 EAPI="2"
 
@@ -60,7 +60,9 @@ RDEPEND="hal? ( sys-apps/hal )
 	>=x11-libs/libxkbui-1.0.2
 	kdrive? (
 		>=x11-libs/libXext-1.0.5
-		sdl? ( media-libs/libsdl ) )"
+		x11-libs/libXv
+		sdl? ( media-libs/libsdl )
+	)"
 	# Xres is dmx-dependent
 	# Xaw is dmx-dependent
 	# Xpm is dmx-dependent, pulls in Xt
